--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <section id="about">
         <div class="contanier">
-            <img class="store-front-" src="./midia/loja.jpg" alt="fachada da loja gamas Tata">
+            <img class="store-front-" src="images/loja.jpg" alt="fachada da loja gamas Tata">
             <div>
                 <h2>sobre a loja </h2>
                 <p>
@@ -44,9 +44,9 @@
                     fugiat sint non.
                 </p> <br>
                 <ul class="brands-list">
-                    <li> <img src="./midia/nintendo.png" alt="nintendo" /></li>
-                    <li> <img src="./midia/xbox.png" alt="xbox" /></li>
-                    <li> <img src="./midia/playstation.png" alt="playstation" /></li>
+                    <li> <img src="./images/nintendo.png" alt="nintendo" /></li>
+                    <li> <img src="./images/xbox.png" alt="xbox" /></li>
+                    <li> <img src="./images/playstation.png" alt="playstation" /></li>
                 </ul>
             </div>
         </div>
@@ -70,19 +70,19 @@
                 <ul class="social-links">
                     <li>
                         <a href="#" title=" Siga-nos no Facebook">
-                            <img src="./midia/facebook.png" alt="logo do facebook">
+                            <img src="./images/facebook.png" alt="logo do facebook">
                          </a>
 
                     </li>
                     <li>
                         <a href="#" title=" Siga-nos no instagran">
-                            <img src="./midia/instagram.png" alt="logo do instagram">
+                            <img src="./images/instagram.png" alt="logo do instagram">
                          </a>
                          
                     </li>
                     <li>
                         <a href="#" title=" visite nosso canal">
-                            <img src="./midia/youtube.png" alt="logo do youtube">
+                            <img src="./images/youtube.png" alt="logo do youtube">
                          </a>
                          
                     </li>
